--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "exalted-countdown",
   "private": true,
   "type": "module",
+  "engines": { "node": ">=18" },
   "dependencies": {
     "@napi-rs/canvas": "^0.1.58",
-    "dayjs": "^1.11.10",
-    "dayjs-plugin-utc": "^0.1.2",
-    "dayjs-plugin-timezone": "^0.1.2"
+    "dayjs": "^1.11.10"
   }
 }
